fixed collapsing navbar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,6 @@
 #searchInput {
   margin-top: 10px;
+  padding-bottom: 10px;
 }
 
 #username {
